objects/Festival_solution__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Number of attendees that can attend the event.</description>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date the festival ends.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GA_Tickets_Sold__c</fullName>
        <label>GA Tickets Sold</label>
        <summarizedField>Attendee_solution__c.Tickets_purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendee_solution__c.Ticket_Type__c</field>
            <operation>equals</operation>
            <value>General Admission</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee_solution__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the festival is scheduled to start.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Tickets_Sold__c</fullName>
        <formula>VIP_Tickets_Sold__c + GA_Tickets_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Tickets_Sold__c</fullName>
        <label>VIP Tickets Sold</label>
        <summarizedField>Attendee_solution__c.Tickets_purchased__c</summarizedField>
        <summaryFilterItems>
            <field>Attendee_solution__c.Ticket_Type__c</field>
            <operation>equals</operation>
            <value>VIP</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee_solution__c.Festival__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <description>Where the festival will be held.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Festival (solution)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Festival Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festivals (solution)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Tickets_sold_cannot_exceed_capacity</fullName>
        <active>true</active>
        <description>We can&apos;t sell more tickets than our festival capacity!</description>
        <errorConditionFormula>Total_Tickets_Sold__c  &gt;  Capacity__c</errorConditionFormula>
        <errorMessage>Tickets sold cannot exceed capacity.</errorMessage>
    </validationRules>
</CustomObject>